<resources>
    <string name="app_name">Student Manager</string>
    <string name="desc_app_icon">Application\'s icon</string>
    <string name="text_student_id">Student\'s ID</string>
    <string name="text_password">Password</string>
    <string name="text_login">login</string>
    <string name="text_login_as_teacher">Login as teacher</string>
    <string name="text_notification">Notification</string>
    <string name="text_schedule">Schedule</string>
    <string name="desc_student_profile_image">student\'s profile image</string>
    <string name="testing_paragraph">The model regarding paragraph length that your teacher undoubtedly taught you involves a topic sentence, a number of facts that support that core idea, and a concluding sentence. The proviso about the number of sentences between the topic sentence and the conclusion was not given to you because it was the magic formula for creating paragraphs of the perfect length; rather, your educator was attempting to give you a good reason to do adequate research on your topic. Academic writing yields the best examples of the topic-support-conclusion paragraph structure. Recent research has provided a wealth of insight about how dogs came to be domesticated by humans and the roles they played in Native American culture. DNA studies on archaeological finds suggest that dogs may have been domesticated by humans as long as 40,000 years ago. When the first humans came to North America from Eurasia, at least 12,000 years ago, domesticated dogs came with them. They appear to have been highly prized by early North American hunter-gatherers and were their only animal companions for centuries, since there were no horses on the continent until the 16th century. You can see from this example how a topic is introduced, supported, and then brought to its natural conclusion. Yet, not all writing is academic, and once you have learned the concept behind good paragraph construction—which is really the art of focused writing in disguise—you should know that there are times when paragraph “rules” can, and should, be broken. READ: Splitting Paragraphs for Easier Reading How to write paragraphs people want to read The fact of the matter is that although you may have numerous valid facts or descriptions related to your paragraph’s core idea, you may lose a reader’s attention if your paragraphs are too long. What’s more, if all of your paragraphs are long, you may lose opportunities to draw your reader in. Journalists, for example, know that their readers respond better to short paragraphs. News readers generally lose interest with long descriptions and even one-sentence paragraphs are considered both acceptable and impactful. Firefighters rushed to First Avenue today to extinguish a blaze on the 1500 block. Anguished onlookers hoped that the flames would be subdued in time to rescue the building’s most prized inhabitants. They weren’t. The cat hospital was gone. When it comes to maintaining a reader’s attention, a good rule of thumb might be to avoid writing more than five or six sentences in a paragraph before finding a logical place to break. That said, remember that the idea behind a paragraph might be short and sweet, or it might merit deeper explanation. There are no strict rules about how many words or lines your paragraphs should be, and there’s no need to lock your doors if you occasionally write long or short ones. The grammar police aren’t coming for you.</string>
    <string name="text_full_name">Full name</string>
    <string name="text_gender">Gender</string>
    <string name="text_birthday">Birthday (Day/Moth/Year)</string>
    <string name="text_address">Address</string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_email">Email</string>
    <string name="text_rate">Rate</string>
    <string name="text_year">Year</string>
    <string name="semester">Semester</string>
    <string name="error_empty_field">Field must not be empty</string>
    <string name="msg_login_success">Login successful</string>
    <string name="msg_login_unsuccessful">Login Unsuccessful</string>
    <string name="text_15_minutes">15 minutes</string>
    <string name="text_45_minutes">45 minutes</string>
    <string name="text_average">Average</string>
    <string name="text_score">score</string>
    <string name="desc_important_notification">mark notification as important</string>
    <string name="notification_important">Important notification</string>
    <string name="desc_teacher_image">profile picture of teacher</string>
    <string name="text_class">Class</string>
    <string name="text_setting">Setting</string>
    <string name="text_search">Search</string>
    <string name="desc_grade_student">number of students of class</string>
    <string name="format_selected">%1$d selected</string>
    <string name="desc_commentor_profile">Profile picture of commentor</string>
    <string name="text_restore">Restore</string>
    <string name="text_submit">Submit</string>
    <string name="msg_student_review">Review this student</string>
    <string name="text_subject">Subject</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="desc_logged_user_profile">Profile image of logged in user</string>
    <string name="text_my_profile">My profile</string>
    <string name="text_about">About</string>
    <string name="text_scoreboard">Scoreboard</string>
    <string name="text_logout">Logout</string>
    <string name="text_confirm">Confirm</string>
    <string name="format_full_name">%1$s %2$s %3$s</string>
    <string name="text_edit_student">Edit student</string>
    <string name="text_edit_score">Edit score</string>
    <string name="text_search_student">Search student</string>
    <string name="text_all">Select all</string>
    <string name="text_12">12</string>
    <string name="text_10">10</string>
    <string name="text_11">11</string>
    <string name="text_new_teacher">Add teacher</string>
    <string name="text_create_notification">Create notification</string>
    <string name="text_manage_students">Manage students</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_add_student">Add student</string>
    <string name="desc_empty_image">empty image</string>
    <string name="text_add_image">Add image</string>
    <string name="text_title">Title</string>
    <string name="text_tag">Tag</string>
    <string name="text_content">Content</string>
    <string name="text_report">Report</string>
    <string name="text_id">ID</string>
    <string name="text_conduct">Conduct</string>
    <string name="text_rank">Rank</string>
    <string name="text_add_teacher">Add teacher</string>
    <string name="add_score_success">Add score successful</string>
    <string name="add_score_fail">Add score unsuccessful \nPlease check again</string>
    <string name="add_feedback_success">Add feedback successful</string>
    <string name="add_feedback_fail">Add feedback unsuccessful \nPlease check again</string>
    <string name="need_content_feedback">You must type the feedback</string>
    <string name="need_content_notify">You must type full information</string>
    <string name="add_notify_success">Add notify successful</string>
    <string name="add_notify_fail">Add notify unsuccessful \nPlease check again</string>
    <string name="add_student_success">Add student successful</string>
    <string name="add_student_fail">Add student unsuccessful \nPlease check again</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="text_date">Date</string>
    <string name="text_manage_schedule">Manage schedule</string>
    <string name="text_teacher">Teacher</string>
    <string name="gi_b_t_u">Giờ bắt đầu</string>
    <string name="you_must_enter_semester_year_class_date_to_add_schedule">* You must enter semester, year, class, Date to add schedule</string>
    <string name="text_new_class">New class</string>
    <string name="text_add_class">Add class</string>
    <string name="text_student">Student</string>
    <string name="text_old_password">Old password</string>
    <string name="text_new_password">New password</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="text_update">Update</string>
    <string name="msg_incorrect_password">This password is incorrect</string>
    <string name="msg_incorrect_confirm_password">Does not match with new password</string>
    <string name="ok">OK</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="_4">4.</string>
    <string name="_5">5.</string>
    <string name="_1">1.</string>
    <string name="session">Session</string>
    <string-array name="array_date">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="array_class">
        <item>10A1</item>
        <item>10A2</item>
        <item>10A3</item>
        <item>10A4</item>
        <item>11A1</item>
        <item>11A2</item>
        <item>11A3</item>
        <item>12A1</item>
        <item>12A2</item>
    </string-array>
    <string-array name="array_subject">
        <item>Math</item>
        <item>Literature</item>
        <item>English</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Hitroy</item>
        <item>Geography</item>
        <item>Moral</item>
    </string-array>
    <string-array name="array_subject_time">
        <item>07:00 - 07:45</item>
        <item>07:50 - 08:35</item>
        <item>09:00 - 09:45</item>
        <item>09:50 - 10:35</item>
        <item>10:40 - 11:25</item>
        <item>12:45 - 13:30</item>
        <item>13:35 - 14:20</item>
        <item>14:45 - 15:30</item>
        <item>15:35 - 16:20</item>
        <item>16:25 - 17:10</item>
    </string-array>
    <string-array name="array_subject_session">
        <item>Morning</item>
        <item>Afternoon</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="class_name">Class name:</string>
    <string name="_10a1">10A1</string>
    <string name="student_s_number">Student\'s number</string>
    <string name="teacher">Teacher:</string>
    <string name="schedule">Schedule</string>
    <string name="change_pass_success">Change password successful</string>
    <string name="change_pass_unsuccess">Change password unsuccessful</string>
    <string name="room">Room</string>
    <string name="add_class_success">Add class successful</string>
</resources>
