<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_manager_student"
        android:icon="@drawable/ic_gender"
        android:title="@string/text_student"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_manager_class"
        android:icon="@drawable/ic_class"
        android:title="@string/text_class"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_manager_teacher"
        android:icon="@drawable/ic_home_teacher"
        android:title="@string/text_teacher"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_manager_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/text_notification"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_create_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/text_schedule"
        app:showAsAction="ifRoom" />


</menu>