<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.teacher.GradeDetailFragment">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:text="@string/class_name"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/ClassId"
            android:layout_width="wrap_content"
            android:text="@string/_10a1"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:text="@string/student_s_number"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/NumberStudent"
            android:layout_width="wrap_content"
            android:text="@string/_10a1"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:text="@string/teacher"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/TeacherClass"
            android:layout_width="wrap_content"
            android:text="@string/_10a1"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.teacher.GradeDetailFragment"
        tools:listitem="@layout/item_student_master" />
</LinearLayout>



